#pragma once
#include <brpc/channel.h>
#include <butil/logging.h> 
#include <brpc/server.h>
#include <gflags/gflags.h>
#include <random>
#include <chrono>
#include <pthread.h>
#include <sys/prctl.h>
#include <netinet/in.h>
#include <arpa/inet.h>

#include "config.h"
#include "base/data_item.h"
#include "compute_node.h"
#include "compute_node/compute_node.pb.h"
#include "compute_node/twoPC.pb.h"
#include "compute_node/calvin.pb.h"
#include "remote_bufferpool/remote_bufferpool.pb.h"
#include "remote_page_table/remote_page_table.pb.h"
#include "remote_page_table/remote_partition_table.pb.h"
#include "storage/storage_rpc.h"
#include "storage/txn_log.h"

extern double ReadOperationRatio; // for workload generator
extern int TryOperationCnt;  // only for micro experiment
extern double ConsecutiveAccessRatio;  // for workload generator
extern double HotPageRatio;  // for workload generator
extern double HotPageRange;  // for workload generator

class ComputeServer;

namespace compute_node_service{
class ComputeNodeServiceImpl : public ComputeNodeService {
    public:
    ComputeNodeServiceImpl(ComputeServer* s): server(s) {};

    virtual ~ComputeNodeServiceImpl(){};

    virtual void Pending(::google::protobuf::RpcController* controller,
                       const ::compute_node_service::PendingRequest* request,
                       ::compute_node_service::PendingResponse* response,
                       ::google::protobuf::Closure* done);

    virtual void GetPage(::google::protobuf::RpcController* controller,
                       const ::compute_node_service::GetPageRequest* request,
                       ::compute_node_service::GetPageResponse* response,
                       ::google::protobuf::Closure* done);
                       
    virtual void LockSuccess(::google::protobuf::RpcController* controller,
                       const ::compute_node_service::LockSuccessRequest* request,
                       ::compute_node_service::LockSuccessResponse* response,
                       ::google::protobuf::Closure* done);

    virtual void TransferDTX(::google::protobuf::RpcController* controller,
                       const ::compute_node_service::TransferDTXRequest* request,
                       ::compute_node_service::TransferDTXResponse* response,
                       ::google::protobuf::Closure* done);

    private:
    ComputeServer* server;
};
};

namespace twopc_service{
class TwoPCServiceImpl : public TwoPCService {
    public:
    TwoPCServiceImpl(ComputeServer* s): server(s) {
        clock_gettime(CLOCK_REALTIME, &next_commit_time);
    };

    virtual ~TwoPCServiceImpl(){};

    virtual void GetDataItem(::google::protobuf::RpcController* controller,
                       const ::twopc_service::GetDataItemRequest* request,
                       ::twopc_service::GetDataItemResponse* response,
                       ::google::protobuf::Closure* done);
    virtual void WriteDataItem(::google::protobuf::RpcController* controller,
                        const ::twopc_service::WriteDataItemRequest* request,
                        ::twopc_service::WriteDataItemResponse* response,
                        ::google::protobuf::Closure* done);
    virtual void Prepare(::google::protobuf::RpcController* controller,
                        const ::twopc_service::PrepareRequest* request,
                        ::twopc_service::PrepareResponse* response,
                        ::google::protobuf::Closure* done);
    virtual void Commit(::google::protobuf::RpcController* controller,
                        const ::twopc_service::CommitRequest* request,
                        ::twopc_service::CommitResponse* response,
                        ::google::protobuf::Closure* done);
    virtual void Abort(::google::protobuf::RpcController* controller,
                        const ::twopc_service::AbortRequest* request,
                        ::twopc_service::AbortResponse* response,
                        ::google::protobuf::Closure* done);
    private:
    ComputeServer* server;

    struct timespec next_commit_time;
    std::mutex commit_log_mutex;
    TxnLog txn_log;
};
};

namespace calvin_service{
class CalvinServiceImpl : public CalvinService {
public:
    CalvinServiceImpl(ComputeServer* s): server(s) {};

    virtual ~CalvinServiceImpl(){};

    // virtual void GetCalvinDataItem(::google::protobuf::RpcController* controller,
                    //    const ::calvin_service::GetCalvinDataItemRequest* request,
                    //    ::calvin_service::GetCalvinDataItemResponse* response,
                    //    ::google::protobuf::Closure* done);
    virtual void SendCalvinDataItem(::google::protobuf::RpcController* controller,
                       const ::calvin_service::SendCalvinDataItemRequest* request,
                       ::calvin_service::SendCalvinDataItemResponse* response,
                       ::google::protobuf::Closure* done);
    private:
    ComputeServer* server;
};
};

struct dtx_entry {
  dtx_entry(uint64_t seed, int type, tx_id_t tid, bool is_par):seed(seed),type(type),tid(tid),is_partitioned(is_par) {}
  uint64_t seed;
  int type;
  tx_id_t tid;
  bool is_partitioned;
};

// Class ComputeNode 可以建立与pagetable的连接，但不能直接与其他计算节点通信
// 因为compute_node_rpc.h引用了compute_node.h，compute_node.h引用了compute_node_rpc.h，会导致循环引用
// 所以建立一个ComputeServer类，ComputeServer类可以与其他计算节点通信
class ComputeServer {
public:
    ComputeServer(ComputeNode* node, std::vector<std::string> compute_ips, std::vector<int> compute_ports): node_(node){
        InitTableNameMeta();
        // 构造与其他计算节点通信的channel
        nodes_channel = new brpc::Channel[ComputeNodeCount];
        brpc::ChannelOptions options;
        options.use_rdma = use_rdma;
        options.timeout_ms = 0x7FFFFFFF;
        options.connect_timeout_ms = 1000; // 1s
        options.max_retry = 10;
        for(int i = 0; i<ComputeNodeCount; i++){
            std::string remote_node = compute_ips[i] + ":" + std::to_string(compute_ports[i]);
            if(nodes_channel[i].Init(remote_node.c_str(), &options) != 0) {
                LOG(ERROR) << "Fail to init channel";
                exit(1);
            }
        }

        std::thread t([this,compute_ports] {
            // Init compute node server
            brpc::Server server;
            auto disk_manager = std::make_shared<DiskManager>();
            auto log_manager = std::make_shared<LogManager>(disk_manager.get(), nullptr, "Raft_Log" + std::to_string(node_->getNodeID()));
            compute_node_service::ComputeNodeServiceImpl compute_node_service_impl(this);
            twopc_service::TwoPCServiceImpl twoPC_service_impl(this);
            storage_service::StoragePoolImpl storage_service_impl(log_manager.get(), disk_manager.get(), nodes_channel, 0);
            calvin_service::CalvinServiceImpl calvin_service_impl(this);
            if (server.AddService(&storage_service_impl, brpc::SERVER_DOESNT_OWN_SERVICE) != 0) {
                LOG(ERROR) << "Fail to add compute_node_service";
                return;
            }
            if (server.AddService(&compute_node_service_impl, brpc::SERVER_DOESNT_OWN_SERVICE) != 0) {
                LOG(ERROR) << "Fail to add compute_node_service";
                return;
            }
            if (server.AddService(&twoPC_service_impl, brpc::SERVER_DOESNT_OWN_SERVICE) != 0) {
                LOG(ERROR) << "Fail to add twoPC_service";
                return;
            }
            if (server.AddService(&calvin_service_impl, brpc::SERVER_DOESNT_OWN_SERVICE) != 0) {
                LOG(ERROR) << "Fail to add twoPC_service";
                return;
            }
            butil::EndPoint point;
            point = butil::EndPoint(butil::IP_ANY, compute_ports[node_->getNodeID()]);
            brpc::ServerOptions server_options;
            server_options.num_threads = 128;
            server_options.use_rdma = use_rdma;

            if (server.Start(point,&server_options) != 0) {
                LOG(ERROR) << "Fail to start Server";
                exit(1);
            }
            server.RunUntilAskedToQuit();
            exit(1);
        });
        t.detach();
    }

    ~ComputeServer(){}

    static void InvalidRPCDone(partition_table_service::InvalidResponse* response, brpc::Controller* cntl);

    static void FlushRPCDone(bufferpool_service::FlushPageResponse* response, brpc::Controller* cntl);

    static void LazyReleaseRPCDone(page_table_service::PAnyUnLockResponse* response, brpc::Controller* cntl);

    void PSUnlockRPCDone(page_table_service::PSUnlockResponse* response, brpc::Controller* cntl, page_id_t page_id);

    void PXUnlockRPCDone(page_table_service::PXUnlockResponse* response, brpc::Controller* cntl, page_id_t page_id);

    static void PSlockRPCDone(page_table_service::PSLockResponse* response, brpc::Controller* cntl, std::atomic<bool>* finish);

    static void PXlockRPCDone(page_table_service::PXLockResponse* response, brpc::Controller* cntl, std::atomic<bool>* finish);

    // ****************** for eager release *********************
    Page* rpc_fetch_s_page(page_id_t page_id);
    Page* rpc_fetch_s_page_new(table_id_t table_id, page_id_t page_id);

    Page* rpc_fetch_x_page(page_id_t page_id);
    Page* rpc_fetch_x_page_new(table_id_t table_id, page_id_t page_id);


    void rpc_release_s_page(page_id_t page_id);
    void rpc_release_s_page_new(table_id_t table_id, page_id_t page_id);
    
    void rpc_release_x_page(page_id_t page_id);
    void rpc_release_x_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_run(int try_operation_cnt); // 以rpc的方式运行计算节点取数据页的逻辑
    // ****************** eager release end *********************

    // ****************** for lazy release *********************
    Page* rpc_lazy_fetch_s_page(page_id_t page_id);
    Page* rpc_lazy_fetch_s_page_new(table_id_t table_id, page_id_t page_id);

    Page* rpc_lazy_fetch_x_page(page_id_t page_id);
    Page* rpc_lazy_fetch_x_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_lazy_release_s_page(page_id_t page_id);
    void rpc_lazy_release_s_page_new(table_id_t table_id, page_id_t page_id);
    
    void rpc_lazy_release_x_page(page_id_t page_id);
    void rpc_lazy_release_x_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_lazy_run(int try_operation_cnt); // 以rpc的方式运行计算节点取数据页的逻辑

    void rpc_lazy_release_all_page();
    void rpc_lazy_release_all_page_new();

    void rpc_lazy_release_all_page_async();
    void rpc_lazy_release_all_page_async_new();
    // ****************** lazy release end *********************

    // ****************** for phase switch *********************
    Page* rpc_phase_switch_fetch_s_page(page_id_t page_id);
    Page* rpc_phase_switch_fetch_s_page_new(table_id_t table_id, page_id_t page_id);
    Page* rpc_phase_switch_coro_fetch_s_page_new(CoroutineScheduler* coro_sched, coro_yield_t &yield, coro_id_t coro_id, table_id_t table_id, page_id_t page_id);

    Page* rpc_phase_switch_fetch_x_page(page_id_t page_id);
    Page* rpc_phase_switch_fetch_x_page_new(table_id_t table_id, page_id_t page_id);
    Page* rpc_phase_switch_coro_fetch_x_page_new(CoroutineScheduler* coro_sched, coro_yield_t &yield, coro_id_t coro_id, table_id_t table_id, page_id_t page_id);
    
    void rpc_phase_switch_release_s_page(page_id_t page_id);
    void rpc_phase_switch_release_s_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_phase_switch_release_x_page(page_id_t page_id);
    void rpc_phase_switch_release_x_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_phase_switch_run(int try_operation_cnt); //每个节点的运行函数
    
    void phase_switch_run_thread(int try_operation_cnt, int thread_id); //每个线程的运行函数
    
    void rpc_phase_switch_get_invalid_pages_new();
    void rpc_phase_switch_sync_invalid_pages_new(); //强同步所有节点的无效页
    void rpc_phase_switch_invalid_pages(int start_pageid, int end_pageid); //将范围内符合条件的数据页设置为无效
    void rpc_phase_switch_invalid_pages_new(); //将范围内符合条件的数据页设置为无效

    // ****************** for 2PC *********************
    Page* local_fetch_s_page(table_id_t table_id, page_id_t page_id);

    Page* local_fetch_x_page(table_id_t table_id, page_id_t page_id);

    void local_release_s_page(table_id_t table_id, page_id_t page_id);

    void local_release_x_page(table_id_t table_id, page_id_t page_id);

    void Get_2pc_Remote_data(node_id_t node_id, table_id_t table_id, Rid rid, bool lock, char* &data);

    void Write_2pc_data(node_id_t node_id, table_id_t table_id, Rid rid, char* data);

    void Get_2pc_Remote_page(node_id_t node_id, table_id_t table_id, Rid rid, bool lock, char* &data);

    bool Prepare_2pc(std::unordered_set<node_id_t> node_id, uint64_t txn_id);

    int Commit_2pc(std::unordered_map<node_id_t, std::vector<std::pair<std::pair<table_id_t, Rid>, char*>>> node_data_map, uint64_t txn_id);

    void Abort_2pc(std::unordered_map<node_id_t, std::vector<std::pair<table_id_t, Rid>>> node_data_map, uint64_t txn_id);

    static void PrepareRPCDone(twopc_service::PrepareResponse* response, brpc::Controller* cntl);

    static void AbortRPCDone(twopc_service::AbortResponse* response, brpc::Controller* cntl);

    static void CommitRPCDone(twopc_service::CommitResponse* response, brpc::Controller* cntl, int* add_latency);

    // ****************** 2PC end *********************
    // ****************** Calvin end *********************
    // void GetCalvinRemotedata(batch_id_t bid, tx_id_t txn_id, std::vector<std::vector<int>> idx, std::vector<std::pair<int, char*>>& res_item, BenchDTX* dtx);

    void SendCalvinRemotedata(batch_id_t bid, tx_id_t txn_id, std::vector<std::pair<int, char*>> data_map, BenchDTX* dtx);

    // ****************** Calvin end *********************


    // 定时进行阶段切换
    void switch_phase();
    // ****************** phase switch end *********************

    // ****************** for delay release *********************
    Page* rpc_delay_fetch_s_page(page_id_t page_id);

    Page* rpc_delay_fetch_x_page(page_id_t page_id);

    void rpc_delay_release_s_page(page_id_t page_id);
    
    void rpc_delay_release_x_page(page_id_t page_id);

    void rpc_delay_release_run(int try_operation_cnt); // 以rpc的方式运行计算节点取数据页的逻辑

    void delay_release_run_thread(int try_operation_cnt, int thread_id); //每个线程的运行函数

    void release_decided_lock();

    void check_if_release_lock();
    // ****************** delay release end *********************

    // ****************** for delay fetch *********************
    Page* rpc_delay2_fetch_s_page(page_id_t page_id);
    Page* rpc_delay2_fetch_s_page_new(CoroutineScheduler* coro_sched, coro_yield_t &yield, coro_id_t coro_id, table_id_t table_id, page_id_t page_id);

    Page* rpc_delay2_fetch_x_page(page_id_t page_id);
    Page* rpc_delay2_fetch_x_page_new(CoroutineScheduler* coro_sched, coro_yield_t &yield, coro_id_t coro_id, table_id_t table_id, page_id_t page_id);

    void rpc_delay2_release_s_page(page_id_t page_id);
    void rpc_delay2_release_s_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_delay2_release_x_page(page_id_t page_id);
    void rpc_delay2_release_x_page_new(table_id_t table_id, page_id_t page_id);

    void rpc_delay_fetch_run(int try_operation_cnt); // 以rpc的方式运行计算节点取数据页的逻辑

    void rpc_delay_fetch_release_all_page();
    void rpc_delay_fetch_release_all_page_new();

    void rpc_delay_fetch_release_all_page_async();
    void rpc_delay_fetch_release_all_page_async_new();
    // ****************** delay fetch end *********************

    // ****************** for single *********************
    Page* single_fetch_s_page(table_id_t table_id, page_id_t page_id);
    Page* single_fetch_x_page(table_id_t table_id, page_id_t page_id);
    void single_release_s_page(table_id_t table_id, page_id_t page_id);
    void single_release_x_page(table_id_t table_id, page_id_t page_id);
    // ****************** for single end *********************

    // ****************** for leap *************************
    Page* rpc_leap_fetch_all_page(std::vector<table_id_t> table_ids, std::vector<page_id_t> page_ids, std::vector<bool> is_x);
    Page* rpc_leap_fetch_s_page(table_id_t table_id, page_id_t page_id);
    Page* rpc_leap_fetch_x_page(table_id_t table_id, page_id_t page_id);
    void rpc_leap_release_s_page(table_id_t table_id, page_id_t page_id);
    void rpc_leap_release_x_page(table_id_t table_id, page_id_t page_id);
    // ****************** for leap end *********************

    // ****************** for star *************************
    Page* rpc_star_fetch_s_page(table_id_t table_id, page_id_t page_id);
    Page* rpc_star_fetch_x_page(table_id_t table_id, page_id_t page_id);
    void rpc_star_release_s_page(table_id_t table_id, page_id_t page_id);
    void rpc_star_release_x_page(table_id_t table_id, page_id_t page_id);
    bool fetch_page_from_storage(table_id_t table_id, page_id_t page_id);
    // ****************** for star end *********************

    std::vector<std::string> table_name_meta;
    void InitTableNameMeta();
    Page* rpc_fetch_page_from_storage(table_id_t table_id, page_id_t page_id);

    inline bool is_partitioned_page(page_id_t page_id){
        return page_id >= node_->getNodeID() * PartitionDataSize && page_id < (node_->getNodeID() + 1) * PartitionDataSize;
    }

    inline uint64_t get_partitioned_size(table_id_t table_id){
        return node_->meta_manager_->GetMaxPageNumPerTable(table_id) / ComputeNodeCount;
    }
        
    inline bool is_partitioned_page_new(table_id_t table_id, page_id_t page_id){
        auto max_pages_this_table = node_->meta_manager_->GetMaxPageNumPerTable(table_id);
        auto partition_size = (max_pages_this_table) / ComputeNodeCount;
        // auto partition_size = max_pages_this_table / ComputeNodeCount;
        return page_id >= (node_->getNodeID() * partition_size + 1) && page_id < ((node_->getNodeID() + 1) * partition_size + 1);
    }

    inline node_id_t get_node_id_by_page_id(page_id_t page_id){
        return page_id / PartitionDataSize;
    }

    inline node_id_t get_node_id_by_page_id_new(table_id_t table_id, page_id_t page_id){
        auto max_pages_this_table = node_->meta_manager_->GetMaxPageNumPerTable(table_id);
        auto partition_size = max_pages_this_table / ComputeNodeCount;
        int node_id = (page_id - 1) / partition_size;
        return node_id >= ComputeNodeCount ? ComputeNodeCount - 1 : node_id;
    }

    // 生成一个随机的数据页ID
    Page_request_info GernerateRandomPageID(std::mt19937& gen, std::uniform_real_distribution<>& dis);
    page_id_t last_generated_page_id = 0;

    // 从远程取数据页
    void UpdatePageFromRemoteCompute(Page* page, page_id_t page_id, node_id_t node_id);
    void UpdatePageFromRemoteComputeNew(Page* page,table_id_t table_id, page_id_t page_id, node_id_t node_id);

    // 将batch事务发送给远程
    void SendBatch(std::vector<dtx_entry> txns, batch_id_t bid, node_id_t node_id, node_id_t s_nid);

    // 获取与其他计算节点通信的channel
    inline brpc::Channel* get_pagetable_channel(){ return &node_->page_table_channel; }
    inline brpc::Channel* get_storage_channel(){ return &node_->storage_channel; }
    inline brpc::Channel* get_compute_channel(){ return nodes_channel; }

    inline ComputeNode* get_node(){ return node_; }

    std::mutex update_m;
    double tx_update_time = 0;
private:
    ComputeNode* node_;

    // brpc::Channel channel; //建立rpc通信的channel
    brpc::Channel* nodes_channel; //与其他计算节点通信的channel
};

int socket_start_client(std::string ip, int port);

int socket_finish_client(std::string ip, int port);